--- a/ecere/Makefile.vanilla
+++ b/ecere/Makefile.vanilla
@@ -22,82 +22,85 @@ OBJECTS1 = $(OBJ)Archive.o $(OBJ)BufferedFile.o $(OBJ)Date.o $(OBJ)DualPipe.o \
 	$(OBJ)harfbuzz-gdef.o $(OBJ)harfbuzz-global.o $(OBJ)harfbuzz-gpos.o $(OBJ)harfbuzz-gsub.o \
 	$(OBJ)harfbuzz-hangul.o $(OBJ)harfbuzz-hebrew.o $(OBJ)harfbuzz-indic.o $(OBJ)harfbuzz-khmer.o \
 	$(OBJ)harfbuzz-myanmar.o $(OBJ)harfbuzz-open.o $(OBJ)harfbuzz-shaper.o $(OBJ)harfbuzz-stream.o \
-	$(OBJ)harfbuzz-tibetan.o $(OBJ)GDIDisplayDriver.o $(OBJ)lfbBlit.o $(OBJ)lfbConvert.o \
-	$(OBJ)LFBDisplayDriver.o $(OBJ)XDisplayDriver.o $(OBJ)Bitmap.o $(OBJ)BitmapResource.o $(OBJ)Color.o \
-	$(OBJ)Display.o
-OBJECTS2 = $(OBJ)DisplaySystem.o $(OBJ)FontResource.o $(OBJ)Resource.o $(OBJ)Surface.o \
-	$(OBJ)Button.o $(OBJ)CalendarControl.o $(OBJ)DataBox.o $(OBJ)DropBox.o $(OBJ)EditBox.o \
-	$(OBJ)Label.o $(OBJ)ListBox.o $(OBJ)Menu.o $(OBJ)Picture.o $(OBJ)ProgressBar.o \
+	$(OBJ)harfbuzz-tibetan.o $(if $(WINDOWS),$(OBJ)GDIDisplayDriver.o,) $(OBJ)lfbBlit.o $(OBJ)lfbConvert.o \
+	$(OBJ)LFBDisplayDriver.o $(if $(LINUX),$(OBJ)XDisplayDriver.o,) $(OBJ)Bitmap.o $(OBJ)BitmapResource.o \
+	$(OBJ)Color.o
+OBJECTS2 = $(OBJ)Display.o $(OBJ)DisplaySystem.o $(OBJ)FontResource.o $(OBJ)Resource.o \
+	$(OBJ)Surface.o $(OBJ)Button.o $(OBJ)CalendarControl.o $(OBJ)DataBox.o $(OBJ)DropBox.o \
+	$(OBJ)EditBox.o $(OBJ)Label.o $(OBJ)ListBox.o $(OBJ)Menu.o $(OBJ)Picture.o $(OBJ)ProgressBar.o \
 	$(OBJ)ScrollBar.o $(OBJ)StatusBar.o $(OBJ)Stacker.o $(OBJ)ColorPicker.o $(OBJ)FileDialog.o \
 	$(OBJ)FindDialog.o $(OBJ)GoToDialog.o $(OBJ)MessageBox.o $(OBJ)ReplaceDialog.o $(OBJ)WindowList.o \
-	$(OBJ)Win32Interface.o $(OBJ)XInterface.o $(OBJ)WindowsSkin.o $(OBJ)Anchor.o $(OBJ)ClipBoard.o \
-	$(OBJ)Cursor.o $(OBJ)Desktop3D.o $(OBJ)FormDesigner.o $(OBJ)GuiApplication.o \
-	$(OBJ)Interface.o $(OBJ)Key.o $(OBJ)Skin.o $(OBJ)Timer.o $(OBJ)typeEdit.o $(OBJ)Window.o \
-	$(OBJ)Array.o $(OBJ)AVLTree.o $(OBJ)BuiltInContainer.o $(OBJ)Container.o \
-	$(OBJ)CustomAVLTree.o $(OBJ)LinkList.o $(OBJ)List.o $(OBJ)Map.o $(OBJ)BinaryTree.o $(OBJ)BTNode.o
-OBJECTS3 = $(OBJ)dataTypes.o $(OBJ)instance.o $(OBJ)String.o $(OBJ)OldList.o \
-	$(OBJ)instance.c.o $(OBJ)$(MODULE).main$(O)
+	$(if $(WINDOWS),$(OBJ)Win32Interface.o,) $(if $(or $(LINUX),$(OSX)),$(OBJ)XInterface.o,) $(OBJ)WindowsSkin.o \
+	$(OBJ)Anchor.o $(OBJ)ClipBoard.o $(OBJ)Cursor.o $(OBJ)Desktop3D.o $(OBJ)FormDesigner.o \
+	$(OBJ)GuiApplication.o $(OBJ)Interface.o $(OBJ)Key.o $(OBJ)Skin.o $(OBJ)Timer.o $(OBJ)typeEdit.o \
+	$(OBJ)Window.o $(OBJ)Array.o $(OBJ)AVLTree.o $(OBJ)BuiltInContainer.o $(OBJ)Container.o \
+	$(OBJ)CustomAVLTree.o $(OBJ)LinkList.o $(OBJ)List.o
+OBJECTS3 = $(OBJ)Map.o $(OBJ)BinaryTree.o $(OBJ)BTNode.o $(OBJ)dataTypes.o \
+	$(OBJ)instance.o $(OBJ)String.o $(OBJ)OldList.o $(OBJ)instance.c.o $(OBJ)$(MODULE).main$(O)
 
 COBJECTS = $(COBJECTS1) $(COBJECTS2)
 COBJECTS1 = $(OBJ)Archive.c $(OBJ)BufferedFile.c $(OBJ)Date.c $(OBJ)DualPipe.c \
 	$(OBJ)EARArchive.c $(OBJ)File.c $(OBJ)FileMonitor.c $(OBJ)GlobalAppSettings.c $(OBJ)JSON.c \
 	$(OBJ)JSONGlobalSettings.c $(OBJ)memory.c $(OBJ)Mutex.c $(OBJ)Semaphore.c $(OBJ)System.c $(OBJ)TempFile.c \
 	$(OBJ)Thread.c $(OBJ)Time.c $(OBJ)unicode.c $(OBJ)units.c $(OBJ)BMPFormat.c \
-	$(OBJ)GDIDisplayDriver.c $(OBJ)lfbBlit.c $(OBJ)lfbConvert.c $(OBJ)LFBDisplayDriver.c \
-	$(OBJ)XDisplayDriver.c $(OBJ)Bitmap.c $(OBJ)BitmapResource.c $(OBJ)Color.c $(OBJ)Display.c \
+	$(if $(WINDOWS),$(OBJ)GDIDisplayDriver.c,) $(OBJ)lfbBlit.c $(OBJ)lfbConvert.c $(OBJ)LFBDisplayDriver.c \
+	$(if $(LINUX),$(OBJ)XDisplayDriver.c,) $(OBJ)Bitmap.c $(OBJ)BitmapResource.c $(OBJ)Color.c $(OBJ)Display.c \
 	$(OBJ)DisplaySystem.c $(OBJ)FontResource.c $(OBJ)Resource.c $(OBJ)Surface.c $(OBJ)Button.c \
 	$(OBJ)CalendarControl.c $(OBJ)DataBox.c $(OBJ)DropBox.c $(OBJ)EditBox.c $(OBJ)Label.c $(OBJ)ListBox.c \
 	$(OBJ)Menu.c $(OBJ)Picture.c $(OBJ)ProgressBar.c $(OBJ)ScrollBar.c $(OBJ)StatusBar.c \
-	$(OBJ)Stacker.c $(OBJ)ColorPicker.c $(OBJ)FileDialog.c $(OBJ)FindDialog.c
-COBJECTS2 = $(OBJ)GoToDialog.c $(OBJ)MessageBox.c $(OBJ)ReplaceDialog.c $(OBJ)WindowList.c \
-	$(OBJ)Win32Interface.c $(OBJ)XInterface.c $(OBJ)WindowsSkin.c $(OBJ)Anchor.c $(OBJ)ClipBoard.c \
-	$(OBJ)Cursor.c $(OBJ)Desktop3D.c $(OBJ)FormDesigner.c $(OBJ)GuiApplication.c \
-	$(OBJ)Interface.c $(OBJ)Key.c $(OBJ)Skin.c $(OBJ)Timer.c $(OBJ)typeEdit.c $(OBJ)Window.c \
-	$(OBJ)Array.c $(OBJ)AVLTree.c $(OBJ)BuiltInContainer.c $(OBJ)Container.c \
-	$(OBJ)CustomAVLTree.c $(OBJ)LinkList.c $(OBJ)List.c $(OBJ)Map.c $(OBJ)BinaryTree.c $(OBJ)BTNode.c \
-	$(OBJ)dataTypes.c $(OBJ)instance.c $(OBJ)String.c $(OBJ)OldList.c
+	$(OBJ)Stacker.c $(OBJ)ColorPicker.c $(OBJ)FileDialog.c
+COBJECTS2 = $(OBJ)FindDialog.c $(OBJ)GoToDialog.c $(OBJ)MessageBox.c $(OBJ)ReplaceDialog.c \
+	$(OBJ)WindowList.c $(if $(WINDOWS),$(OBJ)Win32Interface.c,) \
+	$(if $(or $(LINUX),$(OSX)),$(OBJ)XInterface.c,) $(OBJ)WindowsSkin.c $(OBJ)Anchor.c $(OBJ)ClipBoard.c $(OBJ)Cursor.c \
+	$(OBJ)Desktop3D.c $(OBJ)FormDesigner.c $(OBJ)GuiApplication.c $(OBJ)Interface.c $(OBJ)Key.c \
+	$(OBJ)Skin.c $(OBJ)Timer.c $(OBJ)typeEdit.c $(OBJ)Window.c $(OBJ)Array.c $(OBJ)AVLTree.c \
+	$(OBJ)BuiltInContainer.c $(OBJ)Container.c $(OBJ)CustomAVLTree.c $(OBJ)LinkList.c $(OBJ)List.c \
+	$(OBJ)Map.c $(OBJ)BinaryTree.c $(OBJ)BTNode.c $(OBJ)dataTypes.c $(OBJ)instance.c \
+	$(OBJ)String.c $(OBJ)OldList.c
 
 SYMBOLS = $(SYMBOLS1) $(SYMBOLS2)
 SYMBOLS1 = $(OBJ)Archive.sym $(OBJ)BufferedFile.sym $(OBJ)Date.sym $(OBJ)DualPipe.sym \
 	$(OBJ)EARArchive.sym $(OBJ)File.sym $(OBJ)FileMonitor.sym $(OBJ)GlobalAppSettings.sym \
 	$(OBJ)JSON.sym $(OBJ)JSONGlobalSettings.sym $(OBJ)memory.sym $(OBJ)Mutex.sym \
 	$(OBJ)Semaphore.sym $(OBJ)System.sym $(OBJ)TempFile.sym $(OBJ)Thread.sym $(OBJ)Time.sym \
-	$(OBJ)unicode.sym $(OBJ)units.sym $(OBJ)BMPFormat.sym $(OBJ)GDIDisplayDriver.sym \
-	$(OBJ)lfbBlit.sym $(OBJ)lfbConvert.sym $(OBJ)LFBDisplayDriver.sym $(OBJ)XDisplayDriver.sym \
-	$(OBJ)Bitmap.sym $(OBJ)BitmapResource.sym $(OBJ)Color.sym $(OBJ)Display.sym \
+	$(OBJ)unicode.sym $(OBJ)units.sym $(OBJ)BMPFormat.sym \
+	$(if $(WINDOWS),$(OBJ)GDIDisplayDriver.sym,) $(OBJ)lfbBlit.sym $(OBJ)lfbConvert.sym $(OBJ)LFBDisplayDriver.sym \
+	$(if $(LINUX),$(OBJ)XDisplayDriver.sym,) $(OBJ)Bitmap.sym $(OBJ)BitmapResource.sym $(OBJ)Color.sym $(OBJ)Display.sym \
 	$(OBJ)DisplaySystem.sym $(OBJ)FontResource.sym $(OBJ)Resource.sym $(OBJ)Surface.sym $(OBJ)Button.sym \
 	$(OBJ)CalendarControl.sym $(OBJ)DataBox.sym $(OBJ)DropBox.sym $(OBJ)EditBox.sym $(OBJ)Label.sym \
 	$(OBJ)ListBox.sym $(OBJ)Menu.sym $(OBJ)Picture.sym $(OBJ)ProgressBar.sym $(OBJ)ScrollBar.sym \
-	$(OBJ)StatusBar.sym $(OBJ)Stacker.sym $(OBJ)ColorPicker.sym
-SYMBOLS2 = $(OBJ)FileDialog.sym $(OBJ)FindDialog.sym $(OBJ)GoToDialog.sym \
-	$(OBJ)MessageBox.sym $(OBJ)ReplaceDialog.sym $(OBJ)WindowList.sym $(OBJ)Win32Interface.sym \
-	$(OBJ)XInterface.sym $(OBJ)WindowsSkin.sym $(OBJ)Anchor.sym $(OBJ)ClipBoard.sym $(OBJ)Cursor.sym \
-	$(OBJ)Desktop3D.sym $(OBJ)FormDesigner.sym $(OBJ)GuiApplication.sym $(OBJ)Interface.sym \
-	$(OBJ)Key.sym $(OBJ)Skin.sym $(OBJ)Timer.sym $(OBJ)typeEdit.sym $(OBJ)Window.sym \
-	$(OBJ)Array.sym $(OBJ)AVLTree.sym $(OBJ)BuiltInContainer.sym $(OBJ)Container.sym \
-	$(OBJ)CustomAVLTree.sym $(OBJ)LinkList.sym $(OBJ)List.sym $(OBJ)Map.sym $(OBJ)BinaryTree.sym \
-	$(OBJ)BTNode.sym $(OBJ)dataTypes.sym $(OBJ)instance.sym $(OBJ)String.sym $(OBJ)OldList.sym
+	$(OBJ)StatusBar.sym $(OBJ)Stacker.sym
+SYMBOLS2 = $(OBJ)ColorPicker.sym $(OBJ)FileDialog.sym $(OBJ)FindDialog.sym \
+	$(OBJ)GoToDialog.sym $(OBJ)MessageBox.sym $(OBJ)ReplaceDialog.sym $(OBJ)WindowList.sym \
+	$(if $(WINDOWS),$(OBJ)Win32Interface.sym,) $(if $(or $(LINUX),$(OSX)),$(OBJ)XInterface.sym,) $(OBJ)WindowsSkin.sym \
+	$(OBJ)Anchor.sym $(OBJ)ClipBoard.sym $(OBJ)Cursor.sym $(OBJ)Desktop3D.sym \
+	$(OBJ)FormDesigner.sym $(OBJ)GuiApplication.sym $(OBJ)Interface.sym $(OBJ)Key.sym $(OBJ)Skin.sym \
+	$(OBJ)Timer.sym $(OBJ)typeEdit.sym $(OBJ)Window.sym $(OBJ)Array.sym $(OBJ)AVLTree.sym \
+	$(OBJ)BuiltInContainer.sym $(OBJ)Container.sym $(OBJ)CustomAVLTree.sym $(OBJ)LinkList.sym $(OBJ)List.sym \
+	$(OBJ)Map.sym $(OBJ)BinaryTree.sym $(OBJ)BTNode.sym $(OBJ)dataTypes.sym $(OBJ)instance.sym \
+	$(OBJ)String.sym $(OBJ)OldList.sym
 
 IMPORTS = $(IMPORTS1) $(IMPORTS2)
 IMPORTS1 = $(OBJ)Archive.imp $(OBJ)BufferedFile.imp $(OBJ)Date.imp $(OBJ)DualPipe.imp \
 	$(OBJ)EARArchive.imp $(OBJ)File.imp $(OBJ)FileMonitor.imp $(OBJ)GlobalAppSettings.imp \
 	$(OBJ)JSON.imp $(OBJ)JSONGlobalSettings.imp $(OBJ)memory.imp $(OBJ)Mutex.imp \
 	$(OBJ)Semaphore.imp $(OBJ)System.imp $(OBJ)TempFile.imp $(OBJ)Thread.imp $(OBJ)Time.imp \
-	$(OBJ)unicode.imp $(OBJ)units.imp $(OBJ)BMPFormat.imp $(OBJ)GDIDisplayDriver.imp \
-	$(OBJ)lfbBlit.imp $(OBJ)lfbConvert.imp $(OBJ)LFBDisplayDriver.imp $(OBJ)XDisplayDriver.imp \
-	$(OBJ)Bitmap.imp $(OBJ)BitmapResource.imp $(OBJ)Color.imp $(OBJ)Display.imp \
+	$(OBJ)unicode.imp $(OBJ)units.imp $(OBJ)BMPFormat.imp \
+	$(if $(WINDOWS),$(OBJ)GDIDisplayDriver.imp,) $(OBJ)lfbBlit.imp $(OBJ)lfbConvert.imp $(OBJ)LFBDisplayDriver.imp \
+	$(if $(LINUX),$(OBJ)XDisplayDriver.imp,) $(OBJ)Bitmap.imp $(OBJ)BitmapResource.imp $(OBJ)Color.imp $(OBJ)Display.imp \
 	$(OBJ)DisplaySystem.imp $(OBJ)FontResource.imp $(OBJ)Resource.imp $(OBJ)Surface.imp $(OBJ)Button.imp \
 	$(OBJ)CalendarControl.imp $(OBJ)DataBox.imp $(OBJ)DropBox.imp $(OBJ)EditBox.imp $(OBJ)Label.imp \
 	$(OBJ)ListBox.imp $(OBJ)Menu.imp $(OBJ)Picture.imp $(OBJ)ProgressBar.imp $(OBJ)ScrollBar.imp \
-	$(OBJ)StatusBar.imp $(OBJ)Stacker.imp $(OBJ)ColorPicker.imp
-IMPORTS2 = $(OBJ)FileDialog.imp $(OBJ)FindDialog.imp $(OBJ)GoToDialog.imp \
-	$(OBJ)MessageBox.imp $(OBJ)ReplaceDialog.imp $(OBJ)WindowList.imp $(OBJ)Win32Interface.imp \
-	$(OBJ)XInterface.imp $(OBJ)WindowsSkin.imp $(OBJ)Anchor.imp $(OBJ)ClipBoard.imp $(OBJ)Cursor.imp \
-	$(OBJ)Desktop3D.imp $(OBJ)FormDesigner.imp $(OBJ)GuiApplication.imp $(OBJ)Interface.imp \
-	$(OBJ)Key.imp $(OBJ)Skin.imp $(OBJ)Timer.imp $(OBJ)typeEdit.imp $(OBJ)Window.imp \
-	$(OBJ)Array.imp $(OBJ)AVLTree.imp $(OBJ)BuiltInContainer.imp $(OBJ)Container.imp \
-	$(OBJ)CustomAVLTree.imp $(OBJ)LinkList.imp $(OBJ)List.imp $(OBJ)Map.imp $(OBJ)BinaryTree.imp \
-	$(OBJ)BTNode.imp $(OBJ)dataTypes.imp $(OBJ)instance.imp $(OBJ)String.imp $(OBJ)OldList.imp
+	$(OBJ)StatusBar.imp $(OBJ)Stacker.imp
+IMPORTS2 = $(OBJ)ColorPicker.imp $(OBJ)FileDialog.imp $(OBJ)FindDialog.imp \
+	$(OBJ)GoToDialog.imp $(OBJ)MessageBox.imp $(OBJ)ReplaceDialog.imp $(OBJ)WindowList.imp \
+	$(if $(WINDOWS),$(OBJ)Win32Interface.imp,) $(if $(or $(LINUX),$(OSX)),$(OBJ)XInterface.imp,) $(OBJ)WindowsSkin.imp \
+	$(OBJ)Anchor.imp $(OBJ)ClipBoard.imp $(OBJ)Cursor.imp $(OBJ)Desktop3D.imp \
+	$(OBJ)FormDesigner.imp $(OBJ)GuiApplication.imp $(OBJ)Interface.imp $(OBJ)Key.imp $(OBJ)Skin.imp \
+	$(OBJ)Timer.imp $(OBJ)typeEdit.imp $(OBJ)Window.imp $(OBJ)Array.imp $(OBJ)AVLTree.imp \
+	$(OBJ)BuiltInContainer.imp $(OBJ)Container.imp $(OBJ)CustomAVLTree.imp $(OBJ)LinkList.imp $(OBJ)List.imp \
+	$(OBJ)Map.imp $(OBJ)BinaryTree.imp $(OBJ)BTNode.imp $(OBJ)dataTypes.imp $(OBJ)instance.imp \
+	$(OBJ)String.imp $(OBJ)OldList.imp
 
 SOURCES = $(SOURCES1) $(SOURCES2)
 SOURCES1 = src/sys/Archive.ec src/sys/BufferedFile.ec src/sys/Date.ec src/sys/DualPipe.ec \
@@ -113,21 +116,22 @@ SOURCES1 = src/sys/Archive.ec src/sys/BufferedFile.ec src/sys/Date.ec src/sys/Du
 	src/gfx/drivers/harfbuzz/harfbuzz-khmer.c src/gfx/drivers/harfbuzz/harfbuzz-myanmar.c \
 	src/gfx/drivers/harfbuzz/harfbuzz-open.c src/gfx/drivers/harfbuzz/harfbuzz-shaper.c \
 	src/gfx/drivers/harfbuzz/harfbuzz-stream.c src/gfx/drivers/harfbuzz/harfbuzz-tibetan.c \
-	src/gfx/drivers/GDIDisplayDriver.ec src/gfx/drivers/lfbBlit.ec src/gfx/drivers/lfbConvert.ec \
-	src/gfx/drivers/LFBDisplayDriver.ec src/gfx/drivers/XDisplayDriver.ec src/gfx/Bitmap.ec src/gfx/BitmapResource.ec \
-	src/gfx/Color.ec src/gfx/Display.ec src/gfx/DisplaySystem.ec src/gfx/FontResource.ec \
-	src/gfx/Resource.ec src/gfx/Surface.ec
-SOURCES2 = src/gui/controls/Button.ec src/gui/controls/CalendarControl.ec \
-	src/gui/controls/DataBox.ec src/gui/controls/DropBox.ec src/gui/controls/EditBox.ec \
-	src/gui/controls/Label.ec src/gui/controls/ListBox.ec src/gui/controls/Menu.ec \
-	src/gui/controls/Picture.ec src/gui/controls/ProgressBar.ec src/gui/controls/ScrollBar.ec \
-	src/gui/controls/StatusBar.ec src/gui/controls/Stacker.ec src/gui/dialogs/ColorPicker.ec \
-	src/gui/dialogs/FileDialog.ec src/gui/dialogs/FindDialog.ec src/gui/dialogs/GoToDialog.ec \
-	src/gui/dialogs/MessageBox.ec src/gui/dialogs/ReplaceDialog.ec src/gui/dialogs/WindowList.ec \
-	src/gui/drivers/Win32Interface.ec src/gui/drivers/XInterface.ec src/gui/skins/WindowsSkin.ec src/gui/Anchor.ec \
-	src/gui/ClipBoard.ec src/gui/Cursor.ec src/gui/Desktop3D.ec src/gui/FormDesigner.ec \
-	src/gui/GuiApplication.ec src/gui/Interface.ec src/gui/Key.ec src/gui/Skin.ec src/gui/Timer.ec \
-	src/gui/typeEdit.ec src/gui/Window.ec src/com/containers/Array.ec src/com/containers/AVLTree.ec \
+	$(if $(WINDOWS),src/gfx/drivers/GDIDisplayDriver.ec,) src/gfx/drivers/lfbBlit.ec src/gfx/drivers/lfbConvert.ec \
+	src/gfx/drivers/LFBDisplayDriver.ec $(if $(LINUX),src/gfx/drivers/XDisplayDriver.ec,) src/gfx/Bitmap.ec \
+	src/gfx/BitmapResource.ec src/gfx/Color.ec src/gfx/Display.ec src/gfx/DisplaySystem.ec \
+	src/gfx/FontResource.ec
+SOURCES2 = src/gfx/Resource.ec src/gfx/Surface.ec src/gui/controls/Button.ec \
+	src/gui/controls/CalendarControl.ec src/gui/controls/DataBox.ec src/gui/controls/DropBox.ec \
+	src/gui/controls/EditBox.ec src/gui/controls/Label.ec src/gui/controls/ListBox.ec \
+	src/gui/controls/Menu.ec src/gui/controls/Picture.ec src/gui/controls/ProgressBar.ec \
+	src/gui/controls/ScrollBar.ec src/gui/controls/StatusBar.ec src/gui/controls/Stacker.ec \
+	src/gui/dialogs/ColorPicker.ec src/gui/dialogs/FileDialog.ec src/gui/dialogs/FindDialog.ec \
+	src/gui/dialogs/GoToDialog.ec src/gui/dialogs/MessageBox.ec src/gui/dialogs/ReplaceDialog.ec \
+	src/gui/dialogs/WindowList.ec $(if $(WINDOWS),src/gui/drivers/Win32Interface.ec,) \
+	$(if $(or $(LINUX),$(OSX)),src/gui/drivers/XInterface.ec,) src/gui/skins/WindowsSkin.ec src/gui/Anchor.ec src/gui/ClipBoard.ec \
+	src/gui/Cursor.ec src/gui/Desktop3D.ec src/gui/FormDesigner.ec src/gui/GuiApplication.ec \
+	src/gui/Interface.ec src/gui/Key.ec src/gui/Skin.ec src/gui/Timer.ec src/gui/typeEdit.ec \
+	src/gui/Window.ec src/com/containers/Array.ec src/com/containers/AVLTree.ec \
 	src/com/containers/BuiltInContainer.ec src/com/containers/Container.ec src/com/containers/CustomAVLTree.ec \
 	src/com/containers/LinkList.ec src/com/containers/List.ec src/com/containers/Map.ec src/com/BinaryTree.ec \
 	src/com/BTNode.ec src/com/dataTypes.ec src/com/instance.ec src/com/String.ec src/com/OldList.ec \
